--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Rectangles</title>
+  <title>Time</title>
   <link rel="stylesheet" href="assets/base.css">
   <script src="assets/voodoo.js" defer></script>
   <link rel="canonical" href="https://rectangles.app/">
@@ -43,9 +43,7 @@
           <li class="m-1 js-hover" title="48 rectangles - 8 hours" data-rectangles="48">Average workday</li>
         </ul>
       </div>
-      <div class="text-center">
-        <p><a href="about.html">Interested in nitty gritty?</a></p>
-      </div>
+
     </section>
   </main>
 </body>
