--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Time</title>
+  <title>Focus</title>
   <link rel="stylesheet" href="assets/base.css">
   <script src="assets/voodoo.js" defer></script>
   <link rel="canonical" href="https://rectangles.app/">
@@ -25,8 +25,8 @@
     <section class="grid-container"></section>
     <section>
       <h1 class="border-b-3 mb-0">Time</h1>
-      <p>There are 144 rectangles.</p>
-      <p>Each rectangle represents 10 minutes of your day.</p>
+      <p>There are 144 blocks.</p>
+      <p>Each block represents 10 minutes of your day.</p>
       <div class="flex flex-wrap items-center">
         <div class="grid-item bg-black m-1"></div>
         <p>Time that has already passed today</p>
